Renamed the file back

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </tbody>
     </table>
 
-    <a href="contacts.html/">My contacts</a>
+    <a href="my_contacts.html/">My contacts</a>
 
 
 </body>
