--- a/my_contacts.html
+++ b/my_contacts.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>My contacts</h1>
-<form action="mailto:consumptionandenvironment@gmail.com" method="post" enctype="text/plain">
+<form action="mailto:XXX@gmail.com" method="post" enctype="text/plain">
     <label>Your name:</label>
     <input type="text" name="yourName" style="margin-top: 2%"><br>
     <label>Your email:</label>
