--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <img src="baby-grey-seal-seen-helgoland.jpg">
-    <h1>Kate Wayenberg</h1>
-    <p><em>From <strong> CEO to developer</strong></em></p>
+    <h1>Kate XXX</h1>
+    <p><em>From <strong> fashion brand CEO to developer</strong></em></p>
     <p>I love <a href="https://www.pinterest.com/kate_wayenberg/animals-seals/">seals</a> and goodies.</p>
     <hr size="1" noshade>
     <h3>Education</h3>
